feat(monitoring): add transport session reuse with configurable session duration